welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:10: error: not found: value estSurBIscuit
	while(estSurBIscuit==true & nbBiscuit == 3){
              ^